--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-lg-auto me-lg-4">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link active" href="index.html">Home</a>
                             </li>
 
                             <li class="nav-item">
