--- a/recruiter.html
+++ b/recruiter.html
@@ -30,7 +30,7 @@ https://templatemo.com/tm-588-ebook-landing
 -->
 <style>
     body {
-    background-color: #eee
+    background-color: white;
 }
 
 .card {
@@ -147,20 +147,19 @@ https://templatemo.com/tm-588-ebook-landing
                             <div class="card p-3 mb-2">
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex flex-row align-items-center">
-                                        <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
                                         <div class="ms-2 c-details">
-                                            <h6 class="mb-0">Mailchimp</h6> <span>1 days ago</span>
+                                            <h6 class="mb-0">Student name</h6> <span>1 days ago</span>
                                         </div>
                                     </div>
-                                    <a href="students-details.html" class="badge"> <span>Design</span> </a>
+                                    <a href="students-details.html" class="badge"> <span>Details</span> </a>
                                 </div>
                                 <div class="mt-5">
-                                    <h3 class="heading">Senior Product<br>Designer-Singapore</h3>
+                                    <h3 class="heading">Applied Work name</h3>
                                     <div class="mt-5">
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <div class="mt-3"> <span class="text1">32 Applied <span class="text2">of 50 capacity</span></span> </div>
+                                        <div class="mt-3"> <span class="text1">2 Accepted <span class="text2">in 10 Applications</span></span> </div>
                                     </div>
                                 </div>
                             </div>
@@ -169,20 +168,19 @@ https://templatemo.com/tm-588-ebook-landing
                             <div class="card p-3 mb-2">
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex flex-row align-items-center">
-                                        <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
                                         <div class="ms-2 c-details">
-                                            <h6 class="mb-0">Dribbble</h6> <span>4 days ago</span>
+                                            <h6 class="mb-0">Student name</h6> <span>1 days ago</span>
                                         </div>
                                     </div>
-                                    <div class="badge"> <span>Product</span> </div>
+                                    <a href="students-details.html" class="badge"> <span>Details</span> </a>
                                 </div>
                                 <div class="mt-5">
-                                    <h3 class="heading">Junior Product<br>Designer-Singapore</h3>
+                                    <h3 class="heading">Applied Work name</h3>
                                     <div class="mt-5">
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <div class="mt-3"> <span class="text1">42 Applied <span class="text2">of 70 capacity</span></span> </div>
+                                        <div class="mt-3"> <span class="text1">5 Accepted <span class="text2">in 10 Applications</span></span> </div>
                                     </div>
                                 </div>
                             </div>
@@ -191,20 +189,19 @@ https://templatemo.com/tm-588-ebook-landing
                             <div class="card p-3 mb-2">
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex flex-row align-items-center">
-                                        <div class="icon"> <i class="bx bxl-reddit"></i> </div>
                                         <div class="ms-2 c-details">
-                                            <h6 class="mb-0">Reddit</h6> <span>2 days ago</span>
+                                            <h6 class="mb-0">Student name</h6> <span>1 days ago</span>
                                         </div>
                                     </div>
-                                    <div class="badge"> <span>Design</span> </div>
+                                    <a href="students-details.html" class="badge"> <span>Details</span> </a>
                                 </div>
                                 <div class="mt-5">
-                                    <h3 class="heading">Software Architect <br>Java - USA</h3>
+                                    <h3 class="heading">Applied Work name</h3>
                                     <div class="mt-5">
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <div class="mt-3"> <span class="text1">52 Applied <span class="text2">of 100 capacity</span></span> </div>
+                                        <div class="mt-3"> <span class="text1">30 Accepted <span class="text2">in 50 Applications</span></span> </div>
                                     </div>
                                 </div>
                             </div>
