--- a/Form-Recruiter.html
+++ b/Form-Recruiter.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>ebook landing page template</title>
+        <title>Rajlaxmi Softsolutions landing page template</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,13 +21,7 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
         <link href="css/templatemo-ebook-landing.css" rel="stylesheet">
-<!--
 
-TemplateMo 588 ebook landing
-
-https://templatemo.com/tm-588-ebook-landing
-
---> 
 <style>
     
  
@@ -239,7 +233,7 @@ input.invalid {
 
         <main>
 
-            <nav class="navbar navbar-expand-lg mb-5  bg-dark">
+            <nav class="navbar navbar-expand-lg mb-5">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <img class="navbar-brand-icon" src="images/logo.jpg"/>
@@ -366,7 +360,7 @@ input.invalid {
                                                 </span>
                                             </div>
                                             <div class="input-group mb-4">
-                                                <input class="form-control" placeholder="mm" oninput="this.className = ''">
+                                                <input class="form-control" placeholder="Skills" oninput="this.className = ''">
                             
                                                 <span class="input-group-text" id="basic-addon2">
                                                     <i class="custom-form-icon bi-envelope"></i>
