--- a/Freelancer.html
+++ b/Freelancer.html
@@ -144,18 +144,15 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex flex-row align-items-center">
                                         <div class="ms-2 c-details">
-                                            <h6 class="mb-0">Frelancer Name</h6> <span>1 days ago (applied time)</span>
+                                            <h6 class="mb-0">Recruiter Name</h6> <span>1 days ago (work posted time)</span>
                                         </div>
                                     </div>
-                                    <a href="students-details.html" class="badge"> <span>Details</span> </a>
+                                    <a href="work-details.html" class="badge"> <span>Details</span> </a>
                                 </div>
                                 <div class="mt-5">
-                                    <h3 class="heading">Applied Work Name</h3>
+                                    <h3 class="heading">Work Name</h3>
                                     <div class="mt-5">
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                        <div class="mt-3"> <span class="text1">3 Accepted <span class="text2">of 10 Application</span></span> </div>
+                                        <div class="mt-3"> <span class="text1">Skills: <span class="text2">Python, JavaScript</span></span> </div>
                                     </div>
                                 </div>
                             </div>
@@ -165,18 +162,15 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex flex-row align-items-center">
                                         <div class="ms-2 c-details">
-                                            <h6 class="mb-0">Frelancer Name</h6> <span>1 days ago (applied time)</span>
+                                            <h6 class="mb-0">Recruiter Name</h6> <span>1 days ago (work posted time)</span>
                                         </div>
                                     </div>
-                                    <a href="students-details.html" class="badge"> <span>Details</span> </a>
+                                    <a href="work-details.html" class="badge"> <span>Details</span> </a>
                                 </div>
                                 <div class="mt-5">
-                                    <h3 class="heading">Applied Work Name</h3>
+                                    <h3 class="heading">Work Name</h3>
                                     <div class="mt-5">
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                        <div class="mt-3"> <span class="text1">5 Accepted <span class="text2">of 10 Application</span></span> </div>
+                                        <div class="mt-3"> <span class="text1">Skills: <span class="text2">Python, JavaScript</span></span> </div>
                                     </div>
                                 </div>
                             </div>
@@ -186,18 +180,15 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex flex-row align-items-center">
                                         <div class="ms-2 c-details">
-                                            <h6 class="mb-0">Frelancer Name</h6> <span>1 days ago (applied time)</span>
+                                            <h6 class="mb-0">Recruiter Name</h6> <span>1 days ago (work posted time)</span>
                                         </div>
                                     </div>
-                                    <a href="students-details.html" class="badge"> <span>Details</span> </a>
+                                    <a href="work-details.html" class="badge"> <span>Details</span> </a>
                                 </div>
                                 <div class="mt-5">
-                                    <h3 class="heading">Applied Work Name</h3>
+                                    <h3 class="heading">Work Name</h3>
                                     <div class="mt-5">
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                        <div class="mt-3"> <span class="text1">7 Accepted <span class="text2">of 10 Application</span></span> </div>
+                                        <div class="mt-3"> <span class="text1">Skills: <span class="text2">Python, JavaScript</span></span> </div>
                                     </div>
                                 </div>
                             </div>
