--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
         <link href="css/templatemo-ebook-landing.css" rel="stylesheet">
-<!--
 
-TemplateMo 588 ebook landing
-
-https://templatemo.com/tm-588-ebook-landing
-
--->
     </head>
     
     <body>
@@ -222,12 +216,12 @@ https://templatemo.com/tm-588-ebook-landing
 
 
                                 <h2 class="mb-4">About Us</h2>
+                                <p>Welcome to Rajlaxmi Softsolutions, a leading provider of comprehensive software testing services. We specialize in delivering reliable and high-quality testing solutions to ensure the success of your software projects. With our expertise and dedication to excellence, we are committed to meeting your testing needs and exceeding your expectations.
 
+                                </p>
                                 <p>Rajlaxmi Soft Solutions is an evolving
                                     marketing company that aims to produce real
-                                    results. </p>
-
-                                <p>We use several well-known industry
+                                    results.We use several well-known industry
                                     methodologies and standards, adding our own
                                     stamp and experiences to different projects in
                                     several industries.</p>
@@ -444,8 +438,6 @@ https://templatemo.com/tm-588-ebook-landing
                                 </li>
                             </ul>
 
-                            <p class="copyright-text">Copyright © 2048 ebook company
-                            <br><br><a rel="nofollow" href="https://templatemo.com" target="_blank">designed by templatemo</a></p>
                         </div>
 
 
